environments/dev/service_mesh/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: media-istio-mutual
  namespace: yas-dev
spec:
  host: media.yas-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: payment-istio-mutual
  namespace: yas-dev
spec:
  host: payment.yas-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: order-istio-mutual
  namespace: yas-dev
spec:
  host: order.yas-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mesh-retry-probe
  namespace: yas-dev
spec:
  host: mesh-retry-probe.yas-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
